# PCOL

./: .gitignore  cpt_reference.json  main.py  pcol_notebook.ipynb  pcol_openai.ipynb  pyproject.toml  ~$PCOL CPT DX Code Report.xlsx
cpt_faiss_index/: index.faiss  index.pkl
